# papps

./: LICENSE  Papps.conf  README  README.markdown  TODO  papps.cabal
src/: Main.hs
src/Papps/: Controller.hs  State.hs  Types.hs  Utils.hs  Views.hs
src/Papps/Plugins/: SQLExecute.hs
web/styles/: custom.css  screen.css
