Name:                Papps
Version:             0.0.1
Synopsis:            PasteBin geared toward executing sql.
Description:         Built with Happstack.
License:             BSD3
License-file:        LICENSE
Author:              Tim Horton <tmhorton@gmail.com>
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-Version:       >= 1.6

data-files:
    web/styles/*.css

Flag base4
    Description: Choose the even newer, even smaller, split-up base package.

Executable papps
    Main-is:        Main.hs
    hs-source-dirs: src
    Other-Modules:  Papps.Controller, Papps.State, Papps.Views, Papps.Utils, Paths_Papps
    ghc-options:    -Wall -O2
    Build-Depends:   base
                     , mtl >= 1.1.0.0 && < 2.0.0.0 
                     , bytestring >= 0.9.0.0 && < 0.10.0.0
                     , hsp >= 0.4.5
                     , happstack >= 0.3 && < 0.4
                     , happstack-state >= 0.3.2
                     , happstack-data >= 0.3.2
                     , containers >= 0.2.0.0 && < 0.3.0.0
                     , pretty >= 1.0.1.0 && < 2 
                     , HTTP >= 4000.0.0 && < 4000.0.8
                     , happstack-server >= 0.3 && < 0.4
                     , xhtml >= 3000.2.0.1
                     , highlighting-kate >= 0.2.4
                     , filepath >= 1.1.0.0
                     , old-time >= 1.0.0.2
                     , old-locale >= 1.0.0.1
                     , random >= 1.0.0.1
    if flag(base4)
      Build-Depends: base >=4 && <5, syb
